--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,10 +38,10 @@ bind -n C-left prev
 bind -n C-right next
 
 # Shift 选择面板
-bind -n S-up    select-pane -U
-bind -n S-down  select-pane -D
-bind -n S-left  select-pane -L
-bind -n S-right select-pane -R
+bind -n S-up    select-pane -U \; display-pane
+bind -n S-down  select-pane -D \; display-pane
+bind -n S-left  select-pane -L \; display-pane
+bind -n S-right select-pane -R \; display-pane
 
 # Ctrl+Shift 调整面板
 bind -n C-S-up    resize-pane -U 5
