--- a/.inputrc
+++ b/.inputrc
@@ -14,6 +14,7 @@ set completion-prefix-display-length 4
 set page-completions off
 set match-hidden-files on
 set skip-completed-text on
+set enable-bracketed-paste on
 
 set visible-stats on
 set colored-stats on
