--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,7 +85,7 @@ set -g window-style 'fg=colour245'
 set -g window-active-style 'fg=#f8f8f2'
 # tmuxline end
 
-bind -n DoubleClick1Pane new-window
+bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
 
 bind -n MouseDrag1Status swap-window -t=
 
