--- a/.config/git/config
+++ b/.config/git/config
@@ -101,3 +101,5 @@
     line-numbers = true
     diff-so-fancy = true
     syntax-theme = Dracula
+    plus-style = syntax bold auto
+    minus-style = syntax bold auto
