--- a/.curlrc
+++ b/.curlrc
@@ -4,3 +4,5 @@ user-agent = "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)"
 referer = ";auto"
 connect-timeout = 30
 show-error
+remote-time
+create-dirs
