--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# https://man.openbsd.org/tmux
+
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides "*-256color:Tc"
 
@@ -25,7 +27,7 @@ set -g monitor-activity on
 
 set -g mode-keys vi #复制模式设置为 vi, SPACE开始 ENTER结束
 
-set -g default-shell /usr/local/Caskroom/miniconda/base/bin/fish
+set -g default-shell "$SHELL"
 
 # set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
@@ -53,6 +55,8 @@ bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
 
 bind P pipe-pane -o "cat >> ~/#I.log" \; display "Toggled logging to ~/#I.log"
+
+bind e set synchronize-panes \; display "Toggled sync input!"
 
 bind z resize-pane -Z
 
