--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -7,6 +7,7 @@ shell:
 window:
     startup_mode: Maximized
     dynamic_title: true
+    opacity: 0.9
 
 font:
     size: 14
@@ -20,8 +21,6 @@ bell:
 
 selection:
     save_to_clipboard: true
-
-background_opacity: 0.9
 
 draw_bold_text_with_bright_colors: true
 
