--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,14 +70,14 @@ bind C-n next-layout # 切换面板布局
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 # tmuxline start
-set -g status-bg default
+set -g status-style 'bg=default'
 set -g status-justify right
 
 set -g status-left ''
 set -g status-right "#[fg=white] | #S | #(whoami) | #H | %F %R "
 set -g status-right-length 100
 
-set -g window-status-format "#{?window_activity_flag,#[bg=brightyellow#,bold],#[fg=white]}#I:#W#F"
+set -g window-status-format "#{?window_activity_flag,#[fg=brightyellow],#[fg=white]}#I:#W#F"
 set -g window-status-current-format "#[fg=brightgreen,bold]➤ #I:#W#F"
 
 set -g pane-border-status bottom
