--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,9 +1,11 @@
 env:
     TERM: screen-256color
-    SHELL: /usr/local/Caskroom/miniconda/base/bin/fish
+    SHELL: &shell /usr/local/Caskroom/miniconda/base/bin/fish
 
 shell:
-    program: /usr/local/Caskroom/miniconda/base/bin/fish
+    program: *shell
+
+working_directory: /Users/user/Downloads
 
 window:
     startup_mode: Maximized
