--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# https://editorconfig-specification.readthedocs.io/
+# https://github.com/editorconfig/editorconfig/wiki/EditorConfig-Properties
 
 root = true
 
@@ -6,6 +6,7 @@ root = true
 charset = utf-8
 indent_style = space
 indent_size = 4
+max_line_length = 80
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
