--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@
 
 set -g default-shell "$SHELL"
 set -g default-terminal "screen-256color"
+
+set -ga terminal-features "*:hyperlinks"
 set -ga terminal-overrides "*-256color:Tc"
 
 set -g escape-time 0
