--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,7 @@ bind C-b last-window # double prefix
 bind C-n next-layout # 切换面板布局
 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind C-v source-file ~/.tmux.layout
 
 # tmuxline start
 set -g status-style 'bg=default'
