--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # https://man.openbsd.org/tmux
 
 set -g default-shell "$SHELL"
-set -g default-terminal "screen-256color"
+set -g default-terminal "$TERM"
 
 set -ga terminal-features "*:hyperlinks"
 set -ga terminal-overrides "*-256color:Tc"
