--- a/.inputrc
+++ b/.inputrc
@@ -7,6 +7,7 @@ set convert-meta off
 set show-all-if-ambiguous on
 set show-all-if-unmodified on
 
+set completion-map-case on
 set completion-ignore-case on
 set completion-query-items 200
 set completion-prefix-display-length 4
