--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -16,6 +16,7 @@ color = "#4e4e4e"
 duration = 600
 
 [colors]
+transparent_background_colors = true
 draw_bold_text_with_bright_colors = true
 
 [font]
