--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,7 +88,7 @@ set -g pane-border-style 'fg=white'
 set -g pane-active-border-style 'fg=brightgreen'
 
 set -g window-style 'fg=colour243'
-set -g window-active-style 'fg=#f8f8f2'
+set -g window-active-style 'fg=#f8f8f2,bg=black'
 # tmuxline end
 
 bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
