--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,8 +64,6 @@ bind z resize-pane -Z
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
-bind C-b last-window # double prefix
-
 bind C-n next-layout # 切换面板布局
 
 bind C-v source-file ~/.tmux.layout
@@ -95,6 +93,6 @@ bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
 
 bind -n MouseDrag1Status swap-window -t=
 
-bind -n MouseDown2Pane run 'tmux set-buffer "$(pbpaste)"; tmux paste-buffer' \; display-message "Pasted from clipboard"
+bind -n MouseDown2Pane run 'tmux set-buffer "$(fish_clipboard_paste)"; tmux paste-buffer' \; display-message "Pasted from clipboard"
 
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux show-buffer | pbcopy" \; display-message "Copied to clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux show-buffer | fish_clipboard_copy" \; display-message "Copied to clipboard"
