--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,7 @@ bind -n C-S-down  resize-pane -D 5
 bind -n C-S-left  resize-pane -L 5
 bind -n C-S-right resize-pane -R 5
 
+bind enter new-window
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
 
@@ -93,6 +94,6 @@ bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
 
 bind -n MouseDrag1Status swap-window -t=
 
-bind -n MouseDown2Pane run 'tmux set-buffer "$(fish_clipboard_paste)"; tmux paste-buffer' \; display-message "Pasted from clipboard"
+bind -n MouseDown2Pane run 'tmux set-buffer "$(fish_clipboard_paste)"; tmux paste-buffer' \; display "Pasted from clipboard"
 
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux show-buffer | fish_clipboard_copy" \; display-message "Copied to clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux show-buffer | fish_clipboard_copy" \; display "Copied to clipboard"
