--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -5,7 +5,7 @@ working_directory = "/Users/leo/Downloads"
 [env]
 MAMBA_ROOT_PREFIX = "/Users/leo/mamba"
 SHELL = "/Users/leo/mamba/bin/fish"
-TERM = "screen-256color"
+TERM = "tmux-256color"
 
 [terminal.shell]
 program = "/Users/leo/mamba/bin/fish"
