tmux use OSC 52 and the set-clipboard option to set system clipboard instead of an external tool

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,7 @@
 set -g default-shell "$SHELL"
 set -g default-terminal "$TERM"
 
-set -ga terminal-features "*:hyperlinks"
-set -ga terminal-overrides "*-256color:Tc"
+set -ga terminal-features "*:hyperlinks:clipboard:RGB"
 
 set -g escape-time 0
 set -g display-time 1500
@@ -93,7 +92,3 @@ set -g window-active-style 'fg=#f8f8f2,bg=black'
 bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
 
 bind -n MouseDrag1Status swap-window -t=
-
-bind -n MouseDown2Pane run 'tmux set-buffer "$(fish_clipboard_paste)"; tmux paste-buffer' \; display "Pasted from clipboard"
-
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux show-buffer | fish_clipboard_copy" \; display "Copied to clipboard"
