--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -5,3 +5,8 @@ ratio = [ 1, 3, 4 ]
 show_hidden = true
 sort_by = "extension"
 linemode = "size_and_mtime"
+
+[open]
+prepend_rules = [
+    { mime = "{audio,video}/*", use = [ "open", "reveal" ] }
+]
