--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # https://man.openbsd.org/tmux
 
 set -g default-shell "$SHELL"
-set -g default-terminal "$TERM"
+set -g default-terminal "tmux-256color"
 
 set -ga terminal-features "*:hyperlinks:clipboard:RGB"
 
