--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,7 +4,7 @@ working_directory = "/Users/leo/Downloads"
 
 [env]
 SHELL = "/Users/leo/.pixi/bin/fish"
-TERM = "tmux-256color"
+TERM = "xterm-256color"
 
 [terminal.shell]
 program = "/Users/leo/.pixi/bin/fish"
