--- a/.config/git/config
+++ b/.config/git/config
@@ -81,6 +81,7 @@
     untrackedCache = true
     whitespace = space-before-tab,-indent-with-non-tab,trailing-space
     pager = delta
+    editor = subl -n -w
 [diff]
     renames = copies
 [diff "bin"]
