--- a/.ripgreprc
+++ b/.ripgreprc
@@ -1,8 +1,10 @@
---max-columns=130
---max-columns-preview
-
 --hidden
 
 --follow
 
 --smart-case
+
+--hyperlink-format=file://{host}{path}
+
+--glob
+!.git/*
