--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,8 @@ set -g mouse on
 
 set -g set-titles on
 
+set -g allow-passthrough on
+
 set -g allow-rename on
 set -g automatic-rename on
 
@@ -51,6 +53,7 @@ bind -n C-S-down  resize-pane -D 5
 bind -n C-S-left  resize-pane -L 5
 bind -n C-S-right resize-pane -R 5
 
+bind tab last-window
 bind enter new-window
 bind - split-window -v -c "#{pane_current_path}"
 bind \\ split-window -h -c "#{pane_current_path}"
