--- a/.config/git/config
+++ b/.config/git/config
@@ -109,6 +109,7 @@
     defaultBranch = main
 [delta]
     navigate = true
+    hyperlinks = true
     line-numbers = true
     syntax-theme = Dracula
     plus-style = syntax bold auto
