--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/gradle,windows,macos,java,jetbrains+all
-# Edit at https://www.toptal.com/developers/gitignore?templates=gradle,windows,macos,java,jetbrains+all
+# Created by https://www.toptal.com/developers/gitignore/api/java,gradle,jetbrains+all,windows,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,jetbrains+all,windows,macos
 
 ### Java ###
 # Compiled class file
@@ -200,4 +200,4 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# End of https://www.toptal.com/developers/gitignore/api/gradle,windows,macos,java,jetbrains+all
+# End of https://www.toptal.com/developers/gitignore/api/java,gradle,jetbrains+all,windows,macos
