--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,3 +1,5 @@
 git:
   pagers:
     - pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+gui:
+  nerdFontsVersion: "3"
