--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,31 +1,43 @@
 {
     "workbench.colorTheme": "Dracula Theme",
     "workbench.startupEditor": "newUntitledFile",
-    "workbench.editor.enablePreviewFromCodeNavigation": true,
+    "workbench.editor.revealIfOpen": true,
+    "workbench.editor.showTabIndex": true,
+    "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.enablePreviewFromQuickOpen": true,
+    "workbench.editor.enablePreviewFromCodeNavigation": true,
     "terminal.integrated.stickyScroll.enabled": true,
     "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
     "terminal.integrated.fontSize": 14,
     "editor.fontFamily": "JetBrainsMono Nerd Font",
     "editor.fontSize": 14,
+    "editor.fontLigatures": true,
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
+    "editor.formatOnType": true,
     "editor.mouseWheelZoom": true,
+    "editor.guides.bracketPairs": true,
     "editor.inlineSuggest.enabled": true,
+    "editor.unicodeHighlight.includeComments": false,
     "editor.minimap.showSlider": "always",
     "editor.matchBrackets": "always",
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "all",
     "editor.snippetSuggestions": "top",
+    "editor.rulers": [
+        100
+    ],
+    "markdown.validate.enabled": true,
+    "markdown.updateLinksOnFileMove.enabled": "prompt",
+    "git.autofetch": true,
+    "git.confirmSync": false,
+    "git.enableSmartCommit": true,
+    "git.ignoreLimitWarning": true,
+    "git.openRepositoryInParentFolders": "always",
     "files.autoSave": "onFocusChange",
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
     "files.simpleDialog.enable": true,
-    "breadcrumbs.enabled": true,
-    "git.enableSmartCommit": true,
-    "git.autofetch": true,
-    "git.confirmSync": false,
-    "git.openRepositoryInParentFolders": "always",
     "files.watcherExclude": {
         "**/.git/objects/**": true,
         "**/.git/subtree-cache/**": true,
