--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "tmux-256color"
 
 set -ga terminal-features "*:hyperlinks:clipboard:RGB"
 
-set -g escape-time 0
+set -g escape-time 1
 set -g display-time 1500
 set -g history-limit 10000
 
@@ -28,6 +28,7 @@ set -g renumber-windows on
 set -g aggressive-resize on
 
 set -g monitor-activity on
+set -g visual-activity both
 
 set -g mode-keys vi # 复制模式设置为 vi, SPACE开始 ENTER结束
 
