--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -3,3 +3,4 @@ git:
     - pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
 gui:
   nerdFontsVersion: "3"
+  expandFocusedSidePanel: true
