--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,9 +1,13 @@
 {
     "workbench.colorTheme": "Dracula Theme",
     "workbench.startupEditor": "newUntitledFile",
+    "workbench.tree.indent": 18,
+    "workbench.tree.renderIndentGuides": "always",
+    "workbench.editor.wrapTabs": true,
     "workbench.editor.revealIfOpen": true,
     "workbench.editor.showTabIndex": true,
     "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.enablePreview": true,
     "workbench.editor.enablePreviewFromQuickOpen": true,
     "workbench.editor.enablePreviewFromCodeNavigation": true,
     "terminal.integrated.stickyScroll.enabled": true,
@@ -16,26 +20,27 @@
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "editor.mouseWheelZoom": true,
+    "editor.detectIndentation": false,
+    "editor.scrollBeyondLastLine": false,
+    "editor.renderControlCharacters": true,
     "editor.guides.bracketPairs": true,
     "editor.inlineSuggest.enabled": true,
     "editor.unicodeHighlight.includeComments": false,
+    "editor.showFoldingControls": "always",
     "editor.minimap.showSlider": "always",
     "editor.matchBrackets": "always",
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "all",
     "editor.snippetSuggestions": "top",
     "editor.rulers": [
-        100
+        80,
+        120
     ],
     "markdown.validate.enabled": true,
     "markdown.updateLinksOnFileMove.enabled": "prompt",
-    "git.autofetch": true,
-    "git.confirmSync": false,
-    "git.enableSmartCommit": true,
-    "git.ignoreLimitWarning": true,
-    "git.openRepositoryInParentFolders": "always",
     "files.autoSave": "onFocusChange",
     "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true,
     "files.insertFinalNewline": true,
     "files.simpleDialog.enable": true,
     "files.watcherExclude": {
@@ -53,4 +58,31 @@
         "**/dist-schema": true,
         ".history": true
     },
+    "git.autofetch": true,
+    "git.confirmSync": false,
+    "git.enableSmartCommit": true,
+    "git.ignoreLimitWarning": true,
+    "git.openRepositoryInParentFolders": "always",
+    "github.copilot.chat.azureModels": {
+        "my-gpt-5": {
+            "name": "my-gpt-5",
+            "url": "https://safuapi.prod.secfdg.net/openai/deployments/gpt-5.1-chat/chat/completions?api-version=2025-04-01-preview",
+            "toolCalling": true,
+            "vision": true,
+            "thinking": true,
+            "maxInputTokens": 272000,
+            "maxOutputTokens": 128000,
+        }
+    },
+    "chat.tools.terminal.autoApprove": {
+        "rm": false,
+        "/.*/": true,
+    },
+    "claudeCode.disableLoginPrompt": true,
+    "claudeCode.preferredLocation": "panel",
+    "claudeCode.selectedModel": "anthropic/claude-sonnet-4.5",
+    "java.autobuild.enabled": false,
+    "java.import.maven.enabled": false,
+    "java.import.gradle.enabled": false,
+    "typescript.updateImportsOnFileMove.enabled": "always",
 }
