--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,6 @@ set -g renumber-windows on
 set -g aggressive-resize on
 
 set -g monitor-activity on
-set -g visual-activity both
 
 set -g mode-keys vi # 复制模式设置为 vi, SPACE开始 ENTER结束
 
@@ -78,16 +77,17 @@ set -g status-style 'bg=default'
 set -g status-justify right
 
 set -g status-left ''
-set -g status-right "#[fg=white] | #S | #(whoami) | #H | %F %R "
+set -g status-right "#[fg=white] | #S | #{user} | #H | #(fish -c uptime) | %F %R "
 set -g status-right-length 100
 
 set -g window-status-format "#{?window_activity_flag,#[fg=brightyellow],#[fg=white]}#I:#W#F"
 set -g window-status-current-format "#[fg=brightgreen,bold]➤ #I:#W#F"
 
+set -g pane-border-indicators arrows
 set -g pane-border-status bottom
 set -g pane-border-format '#P:#{pane_current_command}'
-set -g pane-border-style 'fg=white'
-set -g pane-active-border-style 'fg=brightgreen'
+set -g pane-border-style 'fg=colour243'
+set -g pane-active-border-style 'fg=brightgreen,bold'
 
 set -g window-style 'fg=colour243'
 set -g window-active-style 'fg=#f8f8f2,bg=black'
