JetBrainsMono Nerd Font -> Maple Mono Normal NF CN

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -11,9 +11,9 @@
     "workbench.editor.enablePreviewFromQuickOpen": true,
     "workbench.editor.enablePreviewFromCodeNavigation": true,
     "terminal.integrated.stickyScroll.enabled": true,
-    "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
+    "terminal.integrated.fontFamily": "Maple Mono Normal NF CN",
     "terminal.integrated.fontSize": 14,
-    "editor.fontFamily": "JetBrainsMono Nerd Font",
+    "editor.fontFamily": "Maple Mono Normal NF CN",
     "editor.fontSize": 14,
     "editor.fontLigatures": true,
     "editor.formatOnPaste": true,
