--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -22,7 +22,8 @@ draw_bold_text_with_bright_colors = true
 size = 14
 
 [font.normal]
-family = "JetBrainsMono NF"
+family = "Maple Mono Normal NF CN"
+style = "Regular"
 
 [selection]
 save_to_clipboard = true
