--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,8 @@ set -g status-left ''
 set -g status-right "#[fg=white] | #S | #{user} | #H | #(fish -c uptime) | %F %R "
 set -g status-right-length 100
 
-set -g window-status-format "#{?window_activity_flag,#[fg=brightyellow],#[fg=white]}#I:#W#F"
-set -g window-status-current-format "#[fg=brightgreen,bold]➤ #I:#W#F"
+set -g window-status-format "#{?window_activity_flag,#[fg=brightyellow],#[fg=white]}#I:#W#{?pane_synchronized,:sync,}#F"
+set -g window-status-current-format "#[fg=brightgreen,bold]➤ #I:#W#{?pane_synchronized,:sync,}#F"
 
 set -g pane-border-indicators arrows
 set -g pane-border-status bottom
