--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,14 +1,19 @@
 [[plugin.deps]]
 use = "yazi-rs/plugins:full-border"
-rev = "398796d"
+rev = "6c71385"
 hash = "3996fc74044bc44144b323686f887e1"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:toggle-pane"
-rev = "398796d"
+rev = "6c71385"
 hash = "8a7c58225816a163a6e8730c0adafbc8"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-filter"
+rev = "6c71385"
+hash = "407d19bc4fb46eff5fa8ff8337644847"
 
 [[flavor.deps]]
 use = "yazi-rs/flavors:dracula"
-rev = "9276ffa"
-hash = "7a870f143a4026a893ea3123be711e7a"
+rev = "ca61658"
+hash = "8589ae0231756a9daf9c072f31b1fe0"
