--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -3,12 +3,17 @@
 [mgr]
 ratio = [1, 3, 4]
 show_hidden = true
+show_symlink = true
 sort_by = "extension"
 linemode = "size_and_mtime"
 
 [preview]
 wrap = "yes"
+#max_width = 2000
+#max_height = 2000
+
+[tasks]
+suppress_preload = true
 
 [open]
-prepend_rules = [{ mime = "{audio,video}/*", use = ["open", "reveal"] }]
-append_rules = [{ name = "*", use = "edit" }]
+append_rules = [{ url = "*", use = ["open", "edit", "reveal"] }]
