--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-features "*:hyperlinks:clipboard:RGB"
 
 set -g escape-time 1
-set -g display-time 1500
-set -g history-limit 10000
+set -g display-time 2000
+set -g history-limit 15000
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -33,6 +33,8 @@ set -g mode-keys vi # 复制模式设置为 vi, SPACE开始 ENTER结束
 
 # set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
+bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
+
 bind -n C-k clear-history
 
 # Ctrl
@@ -42,16 +44,20 @@ bind -n C-left prev
 bind -n C-right next
 
 # Shift 选择面板
-bind -n S-up    select-pane -U \; display-pane
-bind -n S-down  select-pane -D \; display-pane
-bind -n S-left  select-pane -L \; display-pane
-bind -n S-right select-pane -R \; display-pane
+bind -n S-up    select-pane -U \; display-panes -d 0
+bind -n S-down  select-pane -D \; display-panes -d 0
+bind -n S-left  select-pane -L \; display-panes -d 0
+bind -n S-right select-pane -R \; display-panes -d 0
 
 # Ctrl+Shift 调整面板
 bind -n C-S-up    resize-pane -U 5
 bind -n C-S-down  resize-pane -D 5
 bind -n C-S-left  resize-pane -L 5
 bind -n C-S-right resize-pane -R 5
+
+# Alt 交换窗口
+bind -n M-z swap-window -t -1 \; prev
+bind -n M-x swap-window -t +1 \; next
 
 bind tab last-window
 bind enter new-window
@@ -62,7 +68,9 @@ bind P pipe-pane -o "cat >> ~/#I.log" \; display "Toggled logging to ~/#I.log"
 
 bind e set synchronize-panes \; display "Toggled sync input!"
 
-bind z resize-pane -Z
+bind ` break-pane # 拆分面板为新窗口
+bind z resize-pane -Z # 缩放面板
+bind n rotate-window # 旋转面板（倒序）
 
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
@@ -77,7 +85,7 @@ set -g status-style 'bg=default'
 set -g status-justify right
 
 set -g status-left ''
-set -g status-right "#[fg=white] | #S | #{user} | #H | #(fish -c uptime) | %F %R "
+set -g status-right "#[fg=white] | #S | #{user} | #H | #(fish -c hostip) | #(fish -c uptime) | %F %R "
 set -g status-right-length 100
 
 set -g window-status-format "#{?window_activity_flag,#[fg=brightyellow],#[fg=white]}#I:#W#{?pane_synchronized,:sync,}#F"
@@ -89,10 +97,9 @@ set -g pane-border-format '#P:#{pane_current_command}'
 set -g pane-border-style 'fg=colour243'
 set -g pane-active-border-style 'fg=brightgreen,bold'
 
+set -g display-panes-colour colour243
+set -g display-panes-active-colour brightgreen
+
 set -g window-style 'fg=colour243'
 set -g window-active-style 'fg=#f8f8f2,bg=black'
 # tmuxline end
-
-bind -n DoubleClick1Pane new-window -c "#{pane_current_path}"
-
-bind -n MouseDrag1Status swap-window -t=
